# stlcg

./: setup.cfg
stlcg/: stlcg.py
