[metadata]
name = stlcg
version = 0.0.1
author = "Karen Leung and Nikos Arechiga",
author_email = "karenl7@stanford.edu and nikos.arechiga@tri.global",
description = A toolbox to compute the robustness of STL formulas using computations graphs (PyTorch).
long_description = file: README.md
url = "https://github.com/StanfordASL/stlcg"

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
zip_safe = True
packages = find:
python_requires = >= 3.6, < 3.8, == 3.*
install_requires =
    torch~=1.0
    torchviz
    jupyter

